--- a/src/components/BrowseView/BrowseView.css
+++ b/src/components/BrowseView/BrowseView.css
@@ -1,8 +1,19 @@
 .btn {
-  background-color: #A52422;
-  color: #C6B38E;
+  font-family: 'Alegreya', serif;  
   font-size: 1rem;
+  color: #C6B38E;
+  text-transform: uppercase;
+  background-color: #A52422;
   padding: 10px;
+  border: 0;
   border-radius: 10px;
   outline: none;
+}
+
+.button {
+  text-align: right;
+}
+
+.add-button {
+  right: 20px;
 }
